--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,13 @@
 <br/>
 <br/>
 
-<h1>Hola mundo!</h1>
+<!-- <h1>Hola mundo!</h1> -->
 
 <section class="ae-container-fluid rk-main">
-    <app-portafolio></app-portafolio>
+    <!-- <app-portafolio></app-portafolio> -->
+    <!-- <app-about></app-about> -->
+    <!-- <app-item></app-item> -->
+     <router-outlet></router-outlet>
 </section>
 
 
